--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
-          <span>Bagaimana Cinta Kami Bersemi</span>
+          <span>Kegiatan Kami di SMA Trinitas</span>
           <h2>Cerita Kami</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, similique non soluta nulla asperiores
-            voluptatem.</p>
+          <p>Pengalaman yang menyenangkan bersama teman-teman di sekolah SMA Trinitas Bandung.
+          </p>
         </div>
       </div>
 
@@ -173,7 +173,7 @@
               <div class="timeline-image" style="background-image: url(img/sman23.jpg);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Pertama Bertemu</h3>
+                  <h3>Metamorf</h3>
                   <span>1 Juni 2000</span>
                 </div>
                 <div class="timeline-body">
@@ -283,7 +283,7 @@
 
   <div id="audio-container">
     <audio id="song" autoplay loop>
-      <source src="audio/love.mp3" type="audio/mp3">
+      <source src="audio/see.mp3" type="audio/mp3">
     </audio>
 
     <div class="audio-icon-wrapper" style="display: none;">
