--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
   <link rel="stylesheet" href="style.css">
+  <!--favico-->
+  <link rel="icon" href="login_trinitas.ico" type="image/x-icon" />
 </head>
 
 <body>
@@ -48,7 +50,7 @@
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Dino</h5>
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Trinitas 2425</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -74,37 +76,7 @@
         </div>
       </div>
 
-      <div class="row couple">
-        <div class="col-lg-6">
-          <div class="row">
-            <div class="col-8 text-end">
-              <h3>Kevin</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque praesentium aut ipsa perferendis,
-                incidunt soluta?</p>
-              <p>Putra dari Bpk. Lorem <br> dan <br> Ibu Ipsum</p>
-            </div>
-            <div class="col-4">
-              <img src="img/naruto.webp" alt="Kevin" class="img-responsive rounded-circle">
-            </div>
-          </div>
-        </div>
 
-        <span class="heart"><i class="bi bi-heart-fill"></i></span>
-
-        <div class="col-lg-6">
-          <div class="row">
-            <div class="col-4">
-              <img src="img/hinata.webp" alt="Hinata" class="img-responsive rounded-circle">
-            </div>
-            <div class="col-8">
-              <h3>Marissa</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque praesentium aut ipsa perferendis,
-                incidunt soluta?</p>
-              <p>Putra dari Bpk. Ipsum <br> dan <br> Ibu Lorem</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </section>
 
@@ -145,8 +117,7 @@
           </div>
           
           <p class="alamat">PETA LOKASI</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4710.181132122782!2d107.58898730608199!3d-6.917549517610408!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e610b3821f51%3A0x856b10764757874!2sGOR%20YPII%20-%20Trinitas%20Bandung!5e0!3m2!1sid!2sid!4v1718338299274!5m2!1sid!2sid" 
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          
           <br>
           <a href="https://maps.app.goo.gl/YDnUa1fCiStcD6NB6" target="_blank" class="btn btn-light btn-sm my-3">Klik untuk
             membuka peta</a>
@@ -303,7 +274,7 @@
       year: 2025, // required
       month: 5, // required
       day: 7, // required
-      hours: 8, // Default is 0 [0-23] integer
+      hours: 9, // Default is 0 [0-23] integer
       words: { //words displayed into the countdown
         days: { singular: 'hari', plural: 'hari' },
         hours: { singular: 'jam', plural: 'jam' },
@@ -377,34 +348,9 @@
     //   disableScroll();
     // }
     disableScroll();
-  </script>
-  <script>
-    window.addEventListener("load", function () {
-      const form = document.getElementById('my-form');
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        const data = new FormData(form);
-        const action = e.target.action;
-        fetch(action, {
-          method: 'POST',
-          body: data,
-        })
-          .then(() => {
-            alert("Konfirmasi kehadiran berhasil terkirim!");
-          })
-      });
-    });
-
-  </script>
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const nama = urlParams.get('n') || '';
-    const pronoun = urlParams.get('p') || 'Bapak/Ibu/Saudara/i';
-    const namaContainer = document.querySelector('.hero h4 span');
-    namaContainer.innerText = `${pronoun} ${nama},`.replace(/ ,$/, ',');
-
-    document.querySelector('#nama').value = nama;
-  </script>
+  </script> 
+ 
+  
 </body>
 
 </html>
