add google maps

--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
           <p class="alamat">PETA LOKASI</p>
           
           <br>
+          <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4710.181132122782!2d107.58898730608199!3d-6.917549517610408!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e610b3821f51%3A0x856b10764757874!2sGOR%20YPII%20-%20Trinitas%20Bandung!5e0!3m2!1sid!2sid!4v1718338299274!5m2!1sid!2sid"
+          width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
           <a href="https://maps.app.goo.gl/YDnUa1fCiStcD6NB6" target="_blank" class="btn btn-light btn-sm my-3">Klik untuk
             membuka peta</a>
         </div>
