tambah beberapa gambar

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
         <div class="col-md-8 text-center">
           <h2>Acara Pelepasan</h2>
           <h3>Diselenggarakan pada 7 Mei 2025 di GOR YPII Bandung</h3>
-          <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu, Saudara/i, untuk hadir
-            pada pelepasan siswa/siswi kami </p>
+          <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapa, Ibu orang tua/wali siswa siswi yang kami banggakan </p>
         </div>
       </div>
 
@@ -192,6 +191,77 @@
                 </div>
               </div>
             </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3>Mulai Serius</h3>
+                  <span>1 Januari 2005</span>
+                </div>
+                <div class="timeline-body">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim eaque obcaecati odit
+                    itaque explicabo quisquam quos at.
+                  </p>
+                </div>
+              </div>
+
+            </li>
+            <li>
+              <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3>Tunangan</h3>
+                  <span>7 November 2009</span>
+                </div>
+                <div class="timeline-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, deleniti distinctio. Esse quas sit
+                  explicabo corporis magni qui expedita a.
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3>Mulai Serius</h3>
+                  <span>1 Januari 2005</span>
+                </div>
+                <div class="timeline-body">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim eaque obcaecati odit
+                    itaque explicabo quisquam quos at.
+                  </p>
+                </div>
+              </div>
+
+            </li>
+            <li>
+              <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3>Tunangan</h3>
+                  <span>7 November 2009</span>
+                </div>
+                <div class="timeline-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, deleniti distinctio. Esse quas sit
+                  explicabo corporis magni qui expedita a.
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3>Mulai Serius</h3>
+                  <span>1 Januari 2005</span>
+                </div>
+                <div class="timeline-body">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim eaque obcaecati odit
+                    itaque explicabo quisquam quos at.
+                  </p>
+                </div>
+              </div>
+
+            </li>
           </ul>
         </div>
       </div>
@@ -204,39 +274,93 @@
         <div class="col-md-8 col-10 text-center">
           <span>Memori Kisah Kami</span>
           <h2>Galeri Foto</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, itaque?</p>
+          <p>Gedung dan Pengalaman di SMA Trinitas</p>
         </div>
       </div>
 
       <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/300/1200/768" data-toggle="lightbox" data-caption="Kevin & Marissa 2"
+          <a href="/img/sekolah/depan.jpg" data-toggle="lightbox" data-caption="Halaman Depan SMA Trinitas"
             data-gallery="mygallery">
-            <img src="https://picsum.photos/id/300/300/400" alt="Kevin & Marissa 2" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/depan.jpg" alt="Halaman Depan SMA Trinitas" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/301/1200/768" data-toggle="lightbox" data-caption="Kevin & Marissa 3"
+          <a href="/img/sekolah/lobby.jpg" data-toggle="lightbox" data-caption="Lobby SMA Trinitas"
             data-gallery="mygallery">
-            <img src="https://picsum.photos/id/301/300/400" alt="Kevin & Marissa 3" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/lobby.jpg" alt="Lobby SMA Trinitas" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/302/1200/768" data-toggle="lightbox" data-caption="Kevin & Marissa 4"
+          <a href="/img/sekolah/lapangan_tengah.jpg" data-toggle="lightbox" data-caption="Lapangan Tengah"
             data-gallery="mygallery">
-            <img src="https://picsum.photos/id/302/300/400" alt="Kevin & Marissa 4" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/lapangan_tengah.jpg" alt="Lapangan Tengah" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/304/1200/768" data-toggle="lightbox" data-caption="Kevin & Marissa 5"
+          <a href="/img/sekolah/aula.jpg" data-toggle="lightbox" data-caption="Aula Trinitas"
             data-gallery="mygallery">
-            <img src="https://picsum.photos/id/304/300/400" alt="Kevin & Marissa 5" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/aula.jpg" alt="Aula Trinitas" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="https://picsum.photos/id/305/1200/768" data-toggle="lightbox" data-caption="Kevin & Marissa 6"
+          <a href="/img/sekolah/gor.jpg" data-toggle="lightbox" data-caption="Gor YPII"
             data-gallery="mygallery">
-            <img src="https://picsum.photos/id/305/300/400" alt="Kevin & Marissa 6" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/gor.jpg" alt="GOR YPII" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/parkiran.jpg" data-toggle="lightbox" data-caption="Parkiran"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/parkiran.jpg" alt="Parkiran" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/tamanem.jpg" data-toggle="lightbox" data-caption="Taman Eduard Michelis"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/tamanem.jpg" alt="Taman Eduard Michelis" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/hidroponik.jpg" data-toggle="lightbox" data-caption="Hidroponik"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/hidroponik.jpg" alt="Hidroponik" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/galeri.jpg" data-toggle="lightbox" data-caption="Galeri Investasi BEI"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/galeri.jpg" alt="Galeri Investasi BEI" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/ujian.jpg" data-toggle="lightbox" data-caption="Ujian"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/ujian.jpg" alt="Ujian" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/rabu.jpg" data-toggle="lightbox" data-caption="Rabu Abu"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/rabu.jpg" alt="Rabu Abu" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/trinitas_orches.jpg" data-toggle="lightbox" data-caption="Trinitas Symphony Orchestra"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/trinitas_orches.jpg" alt="Trinitas Symphony Orchestra" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/orches.jpg" data-toggle="lightbox" data-caption="Trinitas Orchestra"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/orches.jpg" alt="Trinitas Orchestra" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/triop.jpg" data-toggle="lightbox" data-caption="Trinitas Open"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/triop.jpg" alt="Trinitas Open" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
@@ -264,7 +388,7 @@
 
   <div id="audio-container">
     <audio id="song" autoplay loop>
-      <source src="audio/see.mp3" type="audio/mp3">
+      <source src="audio/metamorf.mp3" type="audio/mp3">
     </audio>
 
     <div class="audio-icon-wrapper" style="display: none;">
