add gambar tinggal mode yang perbagian timeline

--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
         <div class="col">
           <ul class="timeline">
             <li>
-              <div class="timeline-image" style="background-image: url(img/sman23.jpg);"></div>
+              <div class="timeline-image" style="background-image: url(img/sekolah/metamorf.jpg);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h3>Metamorf</h3>
-                  <span>1 Juni 2000</span>
+                  <span>Juli 2022</span>
                 </div>
                 <div class="timeline-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, modi autem? Commodi autem quo quia?
+                  <p>Pengalaman MPLS di SMA Trinitas
                   </p>
                 </div>
               </div>
@@ -361,6 +361,43 @@
           <a href="/img/sekolah/triop.jpg" data-toggle="lightbox" data-caption="Trinitas Open"
             data-gallery="mygallery">
             <img src="/img/sekolah/triop.jpg" alt="Trinitas Open" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/triop2.jpg" data-toggle="lightbox" data-caption="Trinitas Open"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/triop2.jpg" alt="Trinitas Open" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/rosario.jpg" data-toggle="lightbox" data-caption="Rosario"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/rosario.jpg" alt="Rosario" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/choir.jpg" data-toggle="lightbox" data-caption="Choir"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/choir.jpg" alt="Choir" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        
+        <div class="col mt-3">
+          <a href="/img/sekolah/expo.jpg" data-toggle="lightbox" data-caption="Expo"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/expo.jpg" alt="Expo" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/barista.jpg" data-toggle="lightbox" data-caption="Komunitas Hobi Barista"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/barista.jpg" alt="Komunitas Hobi Barista" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/imlek.jpg" data-toggle="lightbox" data-caption="Imlek & Komunitas Hobi Barongsai"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/imlek.jpg" alt="Imlek & Komunitas Hobi Barongsai" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
