tambah gambar study tour bali

--- a/index.html
+++ b/index.html
@@ -334,6 +334,12 @@
           </a>
         </div>
         <div class="col mt-3">
+          <a href="/img/sekolah/metamorf.jpg" data-toggle="lightbox" data-caption="Metamorf"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/metamorf.jpg" alt="Metamorf" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
           <a href="/img/sekolah/ujian.jpg" data-toggle="lightbox" data-caption="Ujian"
             data-gallery="mygallery">
             <img src="/img/sekolah/ujian.jpg" alt="Ujian" class="img-fluid w-100 rounded">
@@ -370,6 +376,18 @@
           </a>
         </div>
         <div class="col mt-3">
+          <a href="/img/sekolah/triop3.jpg" data-toggle="lightbox" data-caption="Trinitas Open"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/triop3.jpg" alt="Trinitas Open" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/misa.jpg" data-toggle="lightbox" data-caption="Misa"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/misa.jpg" alt="Misa" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
           <a href="/img/sekolah/rosario.jpg" data-toggle="lightbox" data-caption="Rosario"
             data-gallery="mygallery">
             <img src="/img/sekolah/rosario.jpg" alt="Rosario" class="img-fluid w-100 rounded">
@@ -398,6 +416,30 @@
           <a href="/img/sekolah/imlek.jpg" data-toggle="lightbox" data-caption="Imlek & Komunitas Hobi Barongsai"
             data-gallery="mygallery">
             <img src="/img/sekolah/imlek.jpg" alt="Imlek & Komunitas Hobi Barongsai" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/pangan.jpg" data-toggle="lightbox" data-caption="Hari Pangan"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/pangan.jpg" alt="Hari Pangan" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/uprak.jpg" data-toggle="lightbox" data-caption="Ujian Praktek Seni Budaya & Informatika"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/uprak.jpg" alt="Ujian Praktek Seni Budaya & Informatika" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/uprak2.jpg" data-toggle="lightbox" data-caption="Ujian Praktek Seni Budaya & Informatika"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/uprak2.jpg" alt="Ujian Praktek Seni Budaya & Informatika" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/bali.jpg" data-toggle="lightbox" data-caption="Study Tour Bali"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/bali.jpg" alt="Study Tour Bali" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
