--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="card-footer">
                   <i class="bi bi-check-square d-block"></i>
-                      <span>Dress Code : Pakaian Rapi tidak menggunakan kaos</span>
+                      <span>Dress Code Orang Tua/Wali : Pakaian Rapi tidak menggunakan kaos</span>
                 </div> 
               </div>
             </div>
@@ -167,7 +167,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Mulai Serius</h3>
+                  <h3>Lorem Ipsum</h3>
                   <span>1 Januari 2005</span>
                 </div>
                 <div class="timeline-body">
@@ -182,7 +182,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Tunangan</h3>
+                  <h3>Lorem Ipsum</h3>
                   <span>7 November 2009</span>
                 </div>
                 <div class="timeline-body">
@@ -195,7 +195,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Mulai Serius</h3>
+                  <h3>Lorem Ipsum</h3>
                   <span>1 Januari 2005</span>
                 </div>
                 <div class="timeline-body">
@@ -210,7 +210,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Tunangan</h3>
+                  <h3>Lorem Ipsum</h3>
                   <span>7 November 2009</span>
                 </div>
                 <div class="timeline-body">
@@ -223,7 +223,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Mulai Serius</h3>
+                  <h3>Lorem Ipsum</h3>
                   <span>1 Januari 2005</span>
                 </div>
                 <div class="timeline-body">
@@ -238,7 +238,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Tunangan</h3>
+                  <h3>Lorem Ipsum</h3>
                   <span>7 November 2009</span>
                 </div>
                 <div class="timeline-body">
@@ -251,7 +251,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Mulai Serius</h3>
+                  <h3>Lorem Ipsum</h3>
                   <span>1 Januari 2005</span>
                 </div>
                 <div class="timeline-body">
