remove foto-foto gedung berat euy

--- a/index.html
+++ b/index.html
@@ -274,65 +274,9 @@
         <div class="col-md-8 col-10 text-center">
           <span>Memori Kisah Kami</span>
           <h2>Galeri Foto</h2>
-          <p>Gedung dan Pengalaman di SMA Trinitas</p>
+          <p>Pengalaman di SMA Trinitas</p>
         </div>
       </div>
-
-      <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
-        <div class="col mt-3">
-          <a href="/img/sekolah/depan.jpg" data-toggle="lightbox" data-caption="Halaman Depan SMA Trinitas"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/depan.jpg" alt="Halaman Depan SMA Trinitas" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/lobby.jpg" data-toggle="lightbox" data-caption="Lobby SMA Trinitas"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/lobby.jpg" alt="Lobby SMA Trinitas" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/lapangan_tengah.jpg" data-toggle="lightbox" data-caption="Lapangan Tengah"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/lapangan_tengah.jpg" alt="Lapangan Tengah" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/aula.jpg" data-toggle="lightbox" data-caption="Aula Trinitas"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/aula.jpg" alt="Aula Trinitas" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/gor.jpg" data-toggle="lightbox" data-caption="Gor YPII"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/gor.jpg" alt="GOR YPII" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/parkiran.jpg" data-toggle="lightbox" data-caption="Parkiran"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/parkiran.jpg" alt="Parkiran" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/tamanem.jpg" data-toggle="lightbox" data-caption="Taman Eduard Michelis"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/tamanem.jpg" alt="Taman Eduard Michelis" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/hidroponik.jpg" data-toggle="lightbox" data-caption="Hidroponik"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/hidroponik.jpg" alt="Hidroponik" class="img-fluid w-100 rounded">
-          </a>
-        </div>
-        <div class="col mt-3">
-          <a href="/img/sekolah/galeri.jpg" data-toggle="lightbox" data-caption="Galeri Investasi BEI"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/galeri.jpg" alt="Galeri Investasi BEI" class="img-fluid w-100 rounded">
-          </a>
-        </div>
         <div class="col mt-3">
           <a href="/img/sekolah/metamorf.jpg" data-toggle="lightbox" data-caption="Metamorf"
             data-gallery="mygallery">
