remove gambar lieurr

--- a/index.html
+++ b/index.html
@@ -274,9 +274,11 @@
         <div class="col-md-8 col-10 text-center">
           <span>Memori Kisah Kami</span>
           <h2>Galeri Foto</h2>
-          <p>Pengalaman di SMA Trinitas</p>
+          <p>Gedung dan Pengalaman di SMA Trinitas</p>
         </div>
       </div>
+
+      <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
         <div class="col mt-3">
           <a href="/img/sekolah/metamorf.jpg" data-toggle="lightbox" data-caption="Metamorf"
             data-gallery="mygallery">
