--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="col-md-8 col-10 text-center">
           <span>Memori Kisah Kami</span>
           <h2>Galeri Foto</h2>
-          <p>Gedung dan Pengalaman di SMA Trinitas</p>
+          <p>Pengalaman di SMA Trinitas</p>
         </div>
       </div>
 
