--- a/index.html
+++ b/index.html
@@ -280,112 +280,112 @@
 
       <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
         <div class="col mt-3">
-          <a href="/img/sekolah/metamorf.jpg" data-toggle="lightbox" data-caption="Metamorf"
+          <a href="/img/sekolah/metamorf.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Metamorf"
             data-gallery="mygallery">
-            <img src="/img/sekolah/metamorf.jpg" alt="Metamorf" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/metamorf.jpg" loading="lazy" alt="Metamorf" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/ujian.jpg" data-toggle="lightbox" data-caption="Ujian"
+          <a href="/img/sekolah/ujian.jpg" loading="lazy" data-toggle="lightbox" data-caption="Ujian"
             data-gallery="mygallery">
-            <img src="/img/sekolah/ujian.jpg" alt="Ujian" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/ujian.jpg" loading="lazy" alt="Ujian" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/rabu.jpg" data-toggle="lightbox" data-caption="Rabu Abu"
+          <a href="/img/sekolah/rabu.jpg" loading="lazy" data-toggle="lightbox" data-caption="Rabu Abu"
             data-gallery="mygallery">
-            <img src="/img/sekolah/rabu.jpg" alt="Rabu Abu" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/rabu.jpg" loading="lazy" alt="Rabu Abu" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/trinitas_orches.jpg" data-toggle="lightbox" data-caption="Trinitas Symphony Orchestra"
+          <a href="/img/sekolah/trinitas_orches.jpg" loading="lazy" data-toggle="lightbox" data-caption="Trinitas Symphony Orchestra"
             data-gallery="mygallery">
-            <img src="/img/sekolah/trinitas_orches.jpg" alt="Trinitas Symphony Orchestra" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/trinitas_orches.jpg" loading="lazy" alt="Trinitas Symphony Orchestra" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/orches.jpg" data-toggle="lightbox" data-caption="Trinitas Orchestra"
+          <a href="/img/sekolah/orches.jpg" loading="lazy" data-toggle="lightbox" data-caption="Trinitas Orchestra"
             data-gallery="mygallery">
-            <img src="/img/sekolah/orches.jpg" alt="Trinitas Orchestra" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/orches.jpg" loading="lazy" alt="Trinitas Orchestra" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/triop.jpg" data-toggle="lightbox" data-caption="Trinitas Open"
+          <a href="/img/sekolah/triop.jpg" loading="lazy" data-toggle="lightbox" data-caption="Trinitas Open"
             data-gallery="mygallery">
-            <img src="/img/sekolah/triop.jpg" alt="Trinitas Open" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/triop.jpg" loading="lazy" alt="Trinitas Open" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/triop2.jpg" data-toggle="lightbox" data-caption="Trinitas Open"
+          <a href="/img/sekolah/triop2.jpg" loading="lazy" data-toggle="lightbox" data-caption="Trinitas Open"
             data-gallery="mygallery">
-            <img src="/img/sekolah/triop2.jpg" alt="Trinitas Open" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/triop2.jpg" loading="lazy" alt="Trinitas Open" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/triop3.jpg" data-toggle="lightbox" data-caption="Trinitas Open"
+          <a href="/img/sekolah/triop3.jpg" loading="lazy" data-toggle="lightbox" data-caption="Trinitas Open"
             data-gallery="mygallery">
-            <img src="/img/sekolah/triop3.jpg" alt="Trinitas Open" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/triop3.jpg" loading="lazy" alt="Trinitas Open" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/misa.jpg" data-toggle="lightbox" data-caption="Misa"
+          <a href="/img/sekolah/misa.jpg" loading="lazy" data-toggle="lightbox" data-caption="Misa"
             data-gallery="mygallery">
-            <img src="/img/sekolah/misa.jpg" alt="Misa" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/misa.jpg" loading="lazy" alt="Misa" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/rosario.jpg" data-toggle="lightbox" data-caption="Rosario"
+          <a href="/img/sekolah/rosario.jpg" loading="lazy" data-toggle="lightbox" data-caption="Rosario"
             data-gallery="mygallery">
-            <img src="/img/sekolah/rosario.jpg" alt="Rosario" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/rosario.jpg" loading="lazy" alt="Rosario" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/choir.jpg" data-toggle="lightbox" data-caption="Choir"
+          <a href="/img/sekolah/choir.jpg" loading="lazy" data-toggle="lightbox" data-caption="Choir"
             data-gallery="mygallery">
-            <img src="/img/sekolah/choir.jpg" alt="Choir" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/choir.jpg" loading="lazy" alt="Choir" class="img-fluid w-100 rounded">
           </a>
         </div>
         
         <div class="col mt-3">
-          <a href="/img/sekolah/expo.jpg" data-toggle="lightbox" data-caption="Expo"
+          <a href="/img/sekolah/expo.jpg" loading="lazy" data-toggle="lightbox" data-caption="Expo"
             data-gallery="mygallery">
-            <img src="/img/sekolah/expo.jpg" alt="Expo" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/expo.jpg" alt="Expo" loading="lazy" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/barista.jpg" data-toggle="lightbox" data-caption="Komunitas Hobi Barista"
+          <a href="/img/sekolah/barista.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Komunitas Hobi Barista"
             data-gallery="mygallery">
-            <img src="/img/sekolah/barista.jpg" alt="Komunitas Hobi Barista" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/barista.jpg"  loading="lazy" alt="Komunitas Hobi Barista" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/imlek.jpg" data-toggle="lightbox" data-caption="Imlek & Komunitas Hobi Barongsai"
+          <a href="/img/sekolah/imlek.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Imlek & Komunitas Hobi Barongsai"
             data-gallery="mygallery">
-            <img src="/img/sekolah/imlek.jpg" alt="Imlek & Komunitas Hobi Barongsai" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/imlek.jpg" loading="lazy" alt="Imlek & Komunitas Hobi Barongsai" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/pangan.jpg" data-toggle="lightbox" data-caption="Hari Pangan"
+          <a href="/img/sekolah/pangan.jpg" loading="lazy" data-toggle="lightbox" data-caption="Hari Pangan"
             data-gallery="mygallery">
-            <img src="/img/sekolah/pangan.jpg" alt="Hari Pangan" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/pangan.jpg" loading="lazy" alt="Hari Pangan" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/uprak.jpg" data-toggle="lightbox" data-caption="Ujian Praktek Seni Budaya & Informatika"
+          <a href="/img/sekolah/uprak.jpg" loading="lazy" data-toggle="lightbox" data-caption="Ujian Praktek Seni Budaya & Informatika"
             data-gallery="mygallery">
-            <img src="/img/sekolah/uprak.jpg" alt="Ujian Praktek Seni Budaya & Informatika" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/uprak.jpg" loading="lazy" alt="Ujian Praktek Seni Budaya & Informatika" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/uprak2.jpg" data-toggle="lightbox" data-caption="Ujian Praktek Seni Budaya & Informatika"
+          <a href="/img/sekolah/uprak2.jpg" loading="lazy" data-toggle="lightbox" data-caption="Ujian Praktek Seni Budaya & Informatika"
             data-gallery="mygallery">
-            <img src="/img/sekolah/uprak2.jpg" alt="Ujian Praktek Seni Budaya & Informatika" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/uprak2.jpg" loading="lazy" alt="Ujian Praktek Seni Budaya & Informatika" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="/img/sekolah/bali.jpg" data-toggle="lightbox" data-caption="Study Tour Bali"
+          <a href="/img/sekolah/bali.jpg" loading="lazy" data-toggle="lightbox" data-caption="Study Tour Bali"
             data-gallery="mygallery">
-            <img src="/img/sekolah/bali.jpg" alt="Study Tour Bali" class="img-fluid w-100 rounded">
+            <img src="/img/sekolah/bali.jpg" loading="lazy" alt="Study Tour Bali" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
