--- a/index.html
+++ b/index.html
@@ -388,6 +388,12 @@
             <img src="/img/sekolah/bali.jpg" loading="lazy" alt="Study Tour Bali" class="img-fluid w-100 rounded">
           </a>
         </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/p5.jpg" loading="lazy" data-toggle="lightbox" data-caption="Kegiatan P5"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/p5.jpg" loading="lazy" alt="Kegiatan P5" class="img-fluid w-100 rounded">
+          </a>
+        </div>
       </div>
     </div>
   </section>
