--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Lorem Ipsum</h3>
+                  <h3>Rekoleksi</h3>
                   <span>1 Januari 2005</span>
                 </div>
                 <div class="timeline-body">
@@ -182,7 +182,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Lorem Ipsum</h3>
+                  <h3>Studi Industri</h3>
                   <span>7 November 2009</span>
                 </div>
                 <div class="timeline-body">
@@ -195,7 +195,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Lorem Ipsum</h3>
+                  <h3>Retreat</h3>
                   <span>1 Januari 2005</span>
                 </div>
                 <div class="timeline-body">
@@ -210,7 +210,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Lorem Ipsum</h3>
+                  <h3>Live In</h3>
                   <span>7 November 2009</span>
                 </div>
                 <div class="timeline-body">
@@ -223,35 +223,7 @@
               <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h3>Lorem Ipsum</h3>
-                  <span>1 Januari 2005</span>
-                </div>
-                <div class="timeline-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto enim eaque obcaecati odit
-                    itaque explicabo quisquam quos at.
-                  </p>
-                </div>
-              </div>
-
-            </li>
-            <li>
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/301/301);"></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3>Lorem Ipsum</h3>
-                  <span>7 November 2009</span>
-                </div>
-                <div class="timeline-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, deleniti distinctio. Esse quas sit
-                  explicabo corporis magni qui expedita a.
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h3>Lorem Ipsum</h3>
+                  <h3>Studi Tour Bali</h3>
                   <span>1 Januari 2005</span>
                 </div>
                 <div class="timeline-body">
