--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@
           </a>
         </div>
         <div class="col mt-3">
+          <a href="/img/sekolah/kamojang3.jpg"  loading="lazy" data-toggle="lightbox" data-caption="P5 Kamojang"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/kamojang3.jpg" loading="lazy" alt="P5 Kamojang" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
           <a href="/img/sekolah/ujian.jpg" loading="lazy" data-toggle="lightbox" data-caption="Ujian"
             data-gallery="mygallery">
             <img src="/img/sekolah/ujian.jpg" loading="lazy" alt="Ujian" class="img-fluid w-100 rounded">
@@ -348,6 +354,12 @@
           </a>
         </div>
         <div class="col mt-3">
+          <a href="/img/sekolah/pangan.jpg" loading="lazy" data-toggle="lightbox" data-caption="Hari Pangan"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/pangan.jpg" loading="lazy" alt="Hari Pangan" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
           <a href="/img/sekolah/expo.jpg" loading="lazy" data-toggle="lightbox" data-caption="Expo"
             data-gallery="mygallery">
             <img src="/img/sekolah/expo.jpg" alt="Expo" loading="lazy" class="img-fluid w-100 rounded">
@@ -367,12 +379,7 @@
           </a>
         </div>
        
-        <div class="col mt-3">
-          <a href="/img/sekolah/pangan.jpg" loading="lazy" data-toggle="lightbox" data-caption="Hari Pangan"
-            data-gallery="mygallery">
-            <img src="/img/sekolah/pangan.jpg" loading="lazy" alt="Hari Pangan" class="img-fluid w-100 rounded">
-          </a>
-        </div>
+
         <div class="col mt-3">
           <a href="/img/sekolah/uprak.jpg" loading="lazy" data-toggle="lightbox" data-caption="Ujian Praktek Seni Budaya & Informatika"
             data-gallery="mygallery">
