add foto angkatan

--- a/index.html
+++ b/index.html
@@ -423,6 +423,12 @@
             <img src="/img/sekolah/imlek.jpg" loading="lazy" alt="Imlek & Komunitas Hobi Barongsai" class="img-fluid w-100 rounded">
           </a>
         </div>
+        <div class="col mt-3">
+          <a href="/img/sekolah/2425.jpg"  loading="lazy" data-toggle="lightbox" data-caption="Foto Angkatan"
+            data-gallery="mygallery">
+            <img src="/img/sekolah/2425.jpg"  loading="lazy" alt="Foto Angkatan" class="img-fluid w-100 rounded">
+          </a>
+        </div>
       </div>
     </div>
   </section>
